--- a/pom.xml
+++ b/pom.xml
@@ -25,11 +25,18 @@
 			<exclusions>
 				<exclusion>
 					<groupId>org.springframework.boot</groupId>
-					<artifactId>spring-boot-starter-tomcat</artifactId>
+					<artifactId>spring-boot-starter-logging</artifactId>
 				</exclusion>
 			</exclusions>
 		</dependency>
-
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-log4j2</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>com.fasterxml.jackson.dataformat</groupId>
+			<artifactId>jackson-dataformat-yaml</artifactId>
+		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-data-jpa</artifactId>
@@ -38,6 +45,10 @@
 			<groupId>org.postgresql</groupId>
 			<artifactId>postgresql</artifactId>
 			<scope>runtime</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-actuator</artifactId>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
@@ -56,6 +67,12 @@
 			<version>3.1.0</version>
 			<scope>provided</scope>
 		</dependency>
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-lang3</artifactId>
+            <version>3.8.1</version>
+        </dependency>
+
 
 	</dependencies>
 
@@ -65,26 +82,28 @@
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
 				<configuration>
-					<executable>true</executable>
+					<executable>false</executable>
 				</configuration>
 			</plugin>
-<!--			<plugin>-->
-<!--				<groupId>com.amashchenko.maven.plugin</groupId>-->
-<!--				<artifactId>gitflow-maven-plugin</artifactId>-->
-<!--				<version>1.14.0</version>-->
-<!--				<configuration>-->
-<!--					&lt;!&ndash; Execute mvn verify before release &ndash;&gt;-->
-<!--					<preReleaseGoals>verify</preReleaseGoals>-->
-<!--					<preHotfixGoals>verify</preHotfixGoals>-->
-
-<!--					&lt;!&ndash; Configure branches &ndash;&gt;-->
-<!--					<gitFlowConfig>-->
-<!--						<productionBranch>master</productionBranch>-->
-<!--						&lt;!&ndash; default is develop, but we use development &ndash;&gt;-->
-<!--						<developmentBranch>development</developmentBranch>-->
-<!--					</gitFlowConfig>-->
-<!--				</configuration>-->
-<!--			</plugin>-->
+			<plugin>
+				<artifactId>maven-antrun-plugin</artifactId>
+				<executions>
+					<execution>
+						<phase>package</phase>
+						<goals>
+							<goal>run</goal>
+						</goals>
+						<configuration>
+							<tasks>
+								<propertyfile file="version.properties" comment="Version information">
+									<entry key="version" value="${jgitver.calculated_version}" />
+									<entry key="current.build.date" value="${build.timestamp}" />
+								</propertyfile>
+							</tasks>
+						</configuration>
+					</execution>
+				</executions>
+			</plugin>
 		</plugins>
 	</build>
 
