--- a/pom.xml
+++ b/pom.xml
@@ -1,12 +1,13 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" 
+	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
 		<version>2.2.6.RELEASE</version>
-		<relativePath/> <!-- lookup parent from repository -->
+		<relativePath/>
+		<!-- lookup parent from repository -->
 	</parent>
 	<groupId>com.turcom</groupId>
 	<artifactId>conference-demo</artifactId>
@@ -67,11 +68,11 @@
 			<version>3.1.0</version>
 			<scope>provided</scope>
 		</dependency>
-        <dependency>
-            <groupId>org.apache.commons</groupId>
-            <artifactId>commons-lang3</artifactId>
-            <version>3.8.1</version>
-        </dependency>
+		<dependency>
+			<groupId>org.apache.commons</groupId>
+			<artifactId>commons-lang3</artifactId>
+			<version>3.8.1</version>
+		</dependency>
 	</dependencies>
 
 	<build>
@@ -87,16 +88,57 @@
 				<groupId>org.eclipse.jkube</groupId>
 				<artifactId>openshift-maven-plugin</artifactId>
 				<version>1.0.0-alpha-2</version>
+				<executions>
+					<execution>
+						<goals>
+							<goal>resource</goal>
+							<goal>build</goal>
+							<goal>deploy</goal>
+
+						</goals>
+					</execution>
+				</executions>
 				<configuration>
-						<images>
-							<image>
-								<name>${env.DOCKER_REGISTRY}/conference-demo:${jgitver.calculated_version}</name>
-								<build>
-									<dockerFile>${project.basedir}/Dockerfile</dockerFile>
-									<contextDir>${project.basedir}</contextDir>
-								</build>
-							</image>
-						</images>
+					<namespace>conference-demo</namespace>
+					<generateRoute>true</generateRoute>
+					<images>
+						<image>
+							<name>${env.DOCKER_REGISTRY}/conference-demo:${jgitver.calculated_version}</name>
+							<build>
+								<dockerFile>${project.basedir}/Dockerfile</dockerFile>
+								<contextDir>${project.basedir}</contextDir>
+								<ports>
+									<port>5000</port>
+								</ports>
+							</build>
+						</image>
+					</images>
+					<generator>
+						<includes>
+							<include>spring-boot</include>
+						</includes>
+						<config>
+							<spring-boot>
+								<color>always</color>
+							</spring-boot>
+						</config>
+					</generator>
+					<enricher>
+						<excludes>
+							<exclude>jkube-expose</exclude>
+						</excludes>
+						<config>
+							<jkube-controller>
+								<!-- why is this not overriding the name in fragment? -->
+								<name>conference-demo-service</name>
+								<pullPolicy>Always</pullPolicy>
+							</jkube-controller>
+							<jkube-service>
+								<type>NodePort</type>
+							</jkube-service>
+						</config>
+					</enricher>
+
 				</configuration>
 			</plugin>
 
