--- a/pom.xml
+++ b/pom.xml
@@ -100,10 +100,9 @@
 				</executions>
 				<configuration>
 					<namespace>conference-demo</namespace>
-					<registry>172.30.1.1:5000</registry>
 					<images>
 						<image>
-							<name>conference-demo:${jgitver.calculated_version}</name>
+							<name>nexus-conference-demo-dev.192.168.1.255.xip.io/repository/docker/conference-demo:${jgitver.calculated_version}</name>
 							<build>
 								<dockerFile>${project.basedir}/Dockerfile</dockerFile>
 								<contextDir>${project.basedir}</contextDir>
