--- a/src/main/jkube/buildconfig.yaml
+++ b/src/main/jkube/buildconfig.yaml
@@ -3,9 +3,11 @@ spec:
     to:
       kind: DockerImage
       name: nexus-docker-registry-nexus3.192.168.1.255.xip.io/vf/${project.artifactId}:${jgitver.calculated_version}
+    pushSecret:
+      name: nexus  
     strategy:
       sourceStrategy:
         from:
           kind: DockerImage
           name: docker.io/fabric8/s2i-java
-      type: Source
+      type: Docker
