--- a/src/main/jkube/service.yaml
+++ b/src/main/jkube/service.yaml
@@ -1,9 +1,7 @@
 spec:
- template:
-   spec:
-    - ports:
-      - name: http
-        nodePort: 30892
-        port: 5000
-        protocol: TCP
-        targetPort: http
+  ports:
+    - name: http
+      nodePort: 30892
+      port: 5000
+      protocol: TCP
+      targetPort: http
