--- a/src/main/jkube/service.yaml
+++ b/src/main/jkube/service.yaml
@@ -1,7 +1,6 @@
 spec:
   ports:
     - name: http
-      nodePort: 30892
       port: 5000
       protocol: TCP
-      targetPort: http
+      targetPort: commplex-main
