add fix buildconfig

--- a/src/main/jkube/buildconfig.yaml
+++ b/src/main/jkube/buildconfig.yaml
@@ -7,7 +7,7 @@ spec:
     pushSecret:
       name: nexus  
   strategy:
-    sourceStrategy:
+    dockerStrategy:
       from:
         kind: DockerImage
         name: docker.io/fabric8/s2i-java
