change build strategy

--- a/src/main/jkube/buildconfig.yaml
+++ b/src/main/jkube/buildconfig.yaml
@@ -8,7 +8,5 @@ spec:
       name: nexus  
   strategy:
     dockerStrategy:
-      from:
-        kind: DockerImage
-        name: docker.io/fabric8/s2i-java
-    type: Docker
+      dockerfilePath: ./Dockerfile
+    
