--- a/pom.xml
+++ b/pom.xml
@@ -96,7 +96,19 @@
 					<executable>false</executable>
 				</configuration>
 			</plugin>
-
+			<plugin>
+				<groupId>io.github.efenglu.japicc</groupId>
+				<artifactId>japicc-plugin</artifactId>
+				<version>1.0.1</version>
+				<executions>
+					<execution>
+						<goals>
+							<goal>check</goal>
+						</goals>
+						<phase>verify</phase>
+					</execution>
+				</executions>
+			</plugin>
 			<plugin>
 				<groupId>org.eclipse.jkube</groupId>
 				<artifactId>openshift-maven-plugin</artifactId>
