--- a/src/main/resources/application.Beta.properties
+++ b/src/main/resources/application.Beta.properties
@@ -5,5 +5,5 @@ spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto=none
 spring.jpa.hibernate.show-sql=true
 spring.jpa.properties.hibernate.idbc.lob.non_contextual_creation=true
-app.version={APP_VERSION}
+app.version=${APP_VERSION}
 server.port=5000
