--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,4 +15,8 @@ dekorate.openshift.env-vars[1].secret=postgresql
 dekorate.openshift.env-vars[2].name=DB_PASSWORD
 dekorate.openshift.env-vars[2].value=password
 dekorate.openshift.env-vars[2].secret=postgresql
+dekorate.openshift.env-vars[3].name=KUBERNETES_NAMESPACE
+dekorate.openshift.env-vars[3].value=@openshiftNamespace@
+dekorate.openshift.env-vars[4].name=spring_profiles_active
+dekorate.openshift.env-vars[4].value=@spring.profiles.active@
 
