add new strategy

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -19,4 +19,5 @@ dekorate.openshift.env-vars[3].name=KUBERNETES_NAMESPACE
 dekorate.openshift.env-vars[3].value=@openshiftNamespace@
 dekorate.openshift.env-vars[4].name=spring_profiles_active
 dekorate.openshift.env-vars[4].value=@spring.profiles.active@
+dekorate.openshift.metadata.namespace=@openshiftNamespace@
 
