--- a/pom.xml
+++ b/pom.xml
@@ -22,12 +22,8 @@
 	<profiles>
 		<profile>
 			<id>Beta</id>
-			<activation>
-				<activeByDefault>true</activeByDefault>
-				
-			</activation>
 			<properties>
-				<spring.profiles.active>Beta</spring.profiles.active>
+				<spring.profiles.active>beta</spring.profiles.active>
 				<app.version>${project.version}</app.version>
 				<openshiftNamespace>conference-demo-dev</openshiftNamespace>
 			</properties>
