--- a/src/main/resources/application-beta.properties
+++ b/src/main/resources/application-beta.properties
@@ -7,3 +7,4 @@ spring.jpa.hibernate.show-sql=true
 spring.jpa.properties.hibernate.idbc.lob.non_contextual_creation=true
 db.driver=org.h2.Driver
 server.port=5000
+app.version=@application.version@
