--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,9 +15,7 @@ dekorate.openshift.env-vars[1].secret=postgresql
 dekorate.openshift.env-vars[2].name=DB_PASSWORD
 dekorate.openshift.env-vars[2].value=password
 dekorate.openshift.env-vars[2].secret=postgresql
-dekorate.openshift.env-vars[3].name=KUBERNETES_NAMESPACE
-dekorate.openshift.env-vars[3].value=@openshiftNamespace@
 dekorate.openshift.env-vars[4].name=SPRING_PROFILES_ACTIVE
 dekorate.openshift.env-vars[4].value=@spring.profiles.active@
-app.version=@application.version@
+app.version=@project.version@
 
