--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,6 +15,7 @@ dekorate.openshift.env-vars[1].secret=postgresql
 dekorate.openshift.env-vars[2].name=DB_PASSWORD
 dekorate.openshift.env-vars[2].value=password
 dekorate.openshift.env-vars[2].secret=postgresql
-dekorate.openshift.env-vars[4].name=SPRING_PROFILES_ACTIVE
-dekorate.openshift.env-vars[4].value=@spring.profiles.active@
+dekorate.openshift.env-vars[3].name=SPRING_PROFILES_ACTIVE
+dekorate.openshift.env-vars[3].value=@spring.profiles.active@
+dekorate.s2i.docker-file=Dockerfile
 app.version=@project.version@
