add fix strategy

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,7 +5,8 @@ spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto=none
 spring.jpa.hibernate.show-sql=true
 spring.jpa.properties.hibernate.idbc.lob.non_contextual_creation=true
-server.port=5000
+server.port=8080
+dekorate.openshift.expose=true
 dekorate.openshift.env-vars[0].name=DB_HOST
 dekorate.openshift.env-vars[0].value=host
 dekorate.openshift.env-vars[0].secret=postgresql
@@ -17,5 +18,4 @@ dekorate.openshift.env-vars[2].value=password
 dekorate.openshift.env-vars[2].secret=postgresql
 dekorate.openshift.env-vars[3].name=SPRING_PROFILES_ACTIVE
 dekorate.openshift.env-vars[3].value=@spring.profiles.active@
-dekorate.s2i.docker-file=Dockerfile
 app.version=@project.version@
