--- a/src/main/resources/application-beta.properties
+++ b/src/main/resources/application-beta.properties
@@ -7,4 +7,4 @@ spring.jpa.hibernate.show-sql=true
 spring.jpa.properties.hibernate.idbc.lob.non_contextual_creation=true
 db.driver=org.h2.Driver
 server.port=8080
-app.version=@application.version@
+app.version=@project.version@
