--- a/src/main/resources/application-beta.properties
+++ b/src/main/resources/application-beta.properties
@@ -8,3 +8,6 @@ spring.jpa.properties.hibernate.idbc.lob.non_contextual_creation=true
 db.driver=org.h2.Driver
 server.port=8080
 app.version=@project.version@
+server.tomcat.accesslog.enabled=true
+
+
