--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -18,4 +18,13 @@ dekorate.openshift.env-vars[2].value=password
 dekorate.openshift.env-vars[2].secret=postgresql
 dekorate.openshift.env-vars[3].name=SPRING_PROFILES_ACTIVE
 dekorate.openshift.env-vars[3].value=@spring.profiles.active@
+dekorate.s2i.builder-image=turcom-builder
+spring.profiles.active=@spring.profiles.active@
+
 app.version=@project.version@
+debug=true
+
+
+elastic.apm.config_file=elasticapm.properties
+log4j2.configurationFile=log4j2.properties
+
