--- a/src/main/resources/elasticapm.properties
+++ b/src/main/resources/elasticapm.properties
@@ -1,4 +1,4 @@
 service_name=conference-app
 application_packages=com.turcom.conferencedemo
 server_urls=@elasticapm.url@
-environment=
+environment=@spring.profiles.active@
