--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -20,6 +20,10 @@ dekorate.openshift.env-vars[3].name=SPRING_PROFILES_ACTIVE
 dekorate.openshift.env-vars[3].value=@spring.profiles.active@
 dekorate.s2i.builder-image=turcom-builder
 spring.profiles.active=@spring.profiles.active@
+dekorate.jvm.server=true
+dekorate.jvm.xmx=1024
+dekorate.jvm.prefer-ipv4-stack=true
+dekorate.jvm.gc=GarbageCollector.SerialGC
 
 app.version=@project.version@
 debug=true
