add java options

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -18,12 +18,10 @@ dekorate.openshift.env-vars[2].value=password
 dekorate.openshift.env-vars[2].secret=postgresql
 dekorate.openshift.env-vars[3].name=SPRING_PROFILES_ACTIVE
 dekorate.openshift.env-vars[3].value=@spring.profiles.active@
+dekorate.s2i.build-env-vars[0].name=JAVA_OPTIONS
+dekorate.s2i.build-env-vars[0].value=-Xmx2048M
 dekorate.s2i.builder-image=turcom-builder
 spring.profiles.active=@spring.profiles.active@
-dekorate.jvm.server=true
-dekorate.jvm.xmx=1024
-dekorate.jvm.prefer-ipv4-stack=true
-dekorate.jvm.gc=GarbageCollector.SerialGC
 
 app.version=@project.version@
 debug=true
