--- a/src/main/resources/log4j2.properties
+++ b/src/main/resources/log4j2.properties
@@ -15,8 +15,8 @@ appender.es.indexNameFormatter.pattern = yyyy-MM-dd
 
 # with AsyncBatchDelivery every 3 seconds or each 5000 logs
 appender.es.batchDelivery.type = AsyncBatchDelivery
-appender.es.batchDelivery.batchSize = 5000
-appender.es.batchDelivery.deliveryInterval = 3000
+appender.es.batchDelivery.batchSize = 1000
+appender.es.batchDelivery.deliveryInterval = 10000
 
 # with index template
 appender.es.batchDelivery.indexTemplate.type = IndexTemplate
@@ -26,19 +26,19 @@ appender.es.batchDelivery.indexTemplate.path = classpath:indexTemplate-7.json
 # with HC HTTP client
 appender.es.batchDelivery.objectFactory.type = HCHttp
 appender.es.batchDelivery.objectFactory.serverUris = @elasticsearch.url@
-appender.es.batchDelivery.objectFactory.connTimeout = 500
-appender.es.batchDelivery.objectFactory.readTimeout = 10000
-appender.es.batchDelivery.objectFactory.maxTotalConnections = 8
-appender.es.batchDelivery.objectFactory.mappingType = _doc
+# appender.es.batchDelivery.objectFactory.connTimeout = 500
+# appender.es.batchDelivery.objectFactory.readTimeout = 10000
+# appender.es.batchDelivery.objectFactory.maxTotalConnections = 8
+# appender.es.batchDelivery.objectFactory.mappingType = _doc
 
 # with buffers for serialized batchRequest objects
 appender.es.batchDelivery.objectFactory.itemSourceFactory.type = PooledItemSourceFactory
 appender.es.batchDelivery.objectFactory.itemSourceFactory.poolName = logItemPool
-appender.es.batchDelivery.objectFactory.itemSourceFactory.itemSizeInBytes = 5120000
-appender.es.batchDelivery.objectFactory.itemSourceFactory.initialPoolSize = 2
-appender.es.batchDelivery.objectFactory.itemSourceFactory.monitored = true
-appender.es.batchDelivery.objectFactory.itemSourceFactory.monitorTaskInterval = 5000
-appender.es.batchDelivery.objectFactory.itemSourceFactory.resizeTimeout = 100
+appender.es.batchDelivery.objectFactory.itemSourceFactory.itemSizeInBytes = 512000
+appender.es.batchDelivery.objectFactory.itemSourceFactory.initialPoolSize = 3
+# appender.es.batchDelivery.objectFactory.itemSourceFactory.monitored = true
+# appender.es.batchDelivery.objectFactory.itemSourceFactory.monitorTaskInterval = 5000
+# appender.es.batchDelivery.objectFactory.itemSourceFactory.resizeTimeout = 100
 
 # with JacksonJsonLayout
 appender.es.layout.type = JacksonJsonLayout
@@ -46,11 +46,11 @@ appender.es.layout.type = JacksonJsonLayout
 # with buffers for serialized logs
 appender.es.layout.itemSourceFactory.type = PooledItemSourceFactory
 appender.es.layout.itemSourceFactory.poolName = batchItemPool
-appender.es.layout.itemSourceFactory.itemSizeInBytes = 512
-appender.es.layout.itemSourceFactory.initialPoolSize = 10000
-appender.es.layout.itemSourceFactory.monitored = true
-appender.es.layout.itemSourceFactory.monitorTaskInterval = 5000
-appender.es.layout.itemSourceFactory.resizeTimeout = 100
+appender.es.layout.itemSourceFactory.itemSizeInBytes = 512000
+appender.es.layout.itemSourceFactory.initialPoolSize = 3
+# appender.es.layout.itemSourceFactory.monitored = true
+# appender.es.layout.itemSourceFactory.monitorTaskInterval = 5000
+# appender.es.layout.itemSourceFactory.resizeTimeout = 100
 
 # Define a list of available loggers
 loggers = esLogger
@@ -65,6 +65,6 @@ logger.esLogger.level = info
 logger.esLogger.appenderRefs = es
 logger.esLogger.appenderRef.es.ref = elasticsearchAsyncBatch
 
-rootLogger.level = all
+rootLogger.level = INFO
 rootLogger.appenderRefs = elasticsearchAsyncBatch
 rootLogger.appenderRef.elasticsearchAsyncBatch.ref = elasticsearchAsyncBatch
