--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,27 +6,29 @@ spring.jpa.hibernate.ddl-auto=none
 spring.jpa.hibernate.show-sql=true
 spring.jpa.properties.hibernate.idbc.lob.non_contextual_creation=true
 server.port=8080
-dekorate.openshift.expose=true
-dekorate.openshift.env-vars[0].name=DB_HOST
-dekorate.openshift.env-vars[0].value=host
-dekorate.openshift.env-vars[0].secret=postgresql
-dekorate.openshift.env-vars[1].name=DB_USER
-dekorate.openshift.env-vars[1].value=username
-dekorate.openshift.env-vars[1].secret=postgresql
-dekorate.openshift.env-vars[2].name=DB_PASSWORD
-dekorate.openshift.env-vars[2].value=password
-dekorate.openshift.env-vars[2].secret=postgresql
-dekorate.openshift.env-vars[3].name=SPRING_PROFILES_ACTIVE
-dekorate.openshift.env-vars[3].value=@spring.profiles.active@
-dekorate.s2i.build-env-vars[0].name=JAVA_OPTIONS
-dekorate.s2i.build-env-vars[0].value=-Xmx2048M
-dekorate.s2i.builder-image=turcom-builder
+# dekorate.openshift.expose=true
+# dekorate.openshift.env-vars[0].name=DB_HOST
+# dekorate.openshift.env-vars[0].value=host
+# dekorate.openshift.env-vars[0].secret=postgresql
+# dekorate.openshift.env-vars[1].name=DB_USER
+# dekorate.openshift.env-vars[1].value=username
+# dekorate.openshift.env-vars[1].secret=postgresql
+# dekorate.openshift.env-vars[2].name=DB_PASSWORD
+# dekorate.openshift.env-vars[2].value=password
+# dekorate.openshift.env-vars[2].secret=postgresql
+# dekorate.openshift.env-vars[3].name=SPRING_PROFILES_ACTIVE
+# dekorate.openshift.env-vars[3].value=@spring.profiles.active@
+# #dekorate.s2i.build-env-vars[0].name=JAVA_OPTIONS
+# #dekorate.s2i.build-env-vars[0].value=-Xmx2048M
+# dekorate.s2i.builder-image=nexus-docker-registry-nexus3.192.168.1.255.xip.io/docker/turcom-builder
+#dekorate.s2i.registry="nexus-docker-registry-nexus3.192.168.1.255.xip.io"
 spring.profiles.active=@spring.profiles.active@
 
 app.version=@project.version@
 debug=true
-
-
 elastic.apm.config_file=elasticapm.properties
 log4j2.configurationFile=log4j2.properties
 
+#jkube.build.strategy=docker
+#jkube.mode=openshift
+# jkube.build.recreate=buildConfig
